src/test/deca/syntax/valid/test_synt/hello_world/print_sans_argument.deca
// Description:
//    Programme avec un print sans argument.
//    [Semantique], Procedures d'affichage, p100:
//    Un appel à print sans argument n’a aucun effet.
//
// Resultats:
//    Aucun effet. Pas de retour a la ligne.
//
// Historique:
//    cree le 05/01/2022

{
        print();
}
