src/test/deca/syntax/invalid/not_provided/multiple_main.deca
// Description:
//    Programme avec plusieurs blocs main.
//    [Syntaxe]: main dérive vers *un seul* bloc.
//
// Resultats:
//    ligne 10: Erreur, syntaxe invalide
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 05/01/2022

{

}

{

}